--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.28.14",
     "@tanstack/react-query-next-experimental": "^5.28.14",
     "axios": "^1.6.8",
+    "bitcoin-core": "^4.2.0",
     "bitcoinjs-lib": "^6.1.5",
     "btc-staking-ts": "^0.2.0",
     "date-fns": "^3.6.0",
