--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bitcoinjs-lib": "^6.1.5",
     "btc-staking-ts": "^0.2.0",
     "date-fns": "^3.6.0",
+    "ecpair": "^2.1.0",
     "framer-motion": "^11.1.9",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
@@ -36,15 +37,17 @@
     "react-responsive-modal": "^6.4.2",
     "react-tooltip": "^5.26.4",
     "sharp": "^0.33.4",
+    "tiny-secp256k1": "^2.2.3",
     "url-safe-base64": "^1.3.0",
     "usehooks-ts": "^3.0.2"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.11",
     "@tanstack/react-query-devtools": "^5.28.14",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.13.0",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
+    "@types/semver": "^7.5.8",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.11.1",
     "eslint": "^8",
@@ -54,6 +57,6 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "3.4.3",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   }
 }
